--- a/custom_components/reterminal_dashboard/frontend/editor.html
+++ b/custom_components/reterminal_dashboard/frontend/editor.html
@@ -20,7 +20,7 @@
   <aside class="sidebar">
     <div>
       <h1><span class="logo-dot"></span> reTerminal Designer <span
-          style="font-size: 10px; color: var(--muted); vertical-align: middle;">v0.6.3</span></h1>
+          style="font-size: 10px; color: var(--muted); vertical-align: middle;">v0.6.4</span></h1>
       <div style="margin-top: 4px; font-size: 10px;">
         <a href="https://github.com/koosoli/ReTerminalDesigner" target="_blank"
           style="color: var(--accent); text-decoration: none; display: flex; align-items: center; gap: 4px;">
@@ -235,6 +235,37 @@
                 <path d="M20 10h2v4h-2" fill="none" stroke="currentColor" stroke-width="2" />
               </svg>
               <span class="label">Battery</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- LVGL Category -->
+        <div class="widget-category" data-category="lvgl">
+          <div class="widget-category-header" onclick="toggleWidgetCategory('lvgl')">
+            <span class="category-icon">▶</span>
+            <svg class="category-svg" viewBox="0 0 24 24" width="16" height="16">
+              <path
+                d="M12 2L2 7l10 5 10-5-10-5zm0 9l2.5-1.25L12 8.5l-2.5 1.25L12 11zm0 2.5l-5-2.5-5 2.5L12 22l10-8.5-5-2.5-5 2.5z"
+                fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" />
+            </svg>
+            <span class="category-name">LVGL Widgets</span>
+            <span class="category-count">2</span>
+          </div>
+          <div class="widget-category-items">
+            <div class="item" data-widget-type="lvgl_button">
+              <svg class="widget-icon" viewBox="0 0 24 24" width="18" height="18">
+                <rect x="4" y="8" width="16" height="8" rx="2" fill="currentColor" fill-opacity="0.2"
+                  stroke="currentColor" stroke-width="2" />
+                <text x="12" y="16.5" font-size="8" text-anchor="middle" fill="currentColor">BTN</text>
+              </svg>
+              <span class="label">Button</span>
+            </div>
+            <div class="item" data-widget-type="lvgl_arc">
+              <svg class="widget-icon" viewBox="0 0 24 24" width="18" height="18">
+                <path d="M4 18 A 10 10 0 1 1 20 18" fill="none" stroke="currentColor" stroke-width="2"
+                  stroke-linecap="round" />
+              </svg>
+              <span class="label">Arc</span>
             </div>
           </div>
         </div>
@@ -637,6 +668,7 @@
   <script src="js/io/ha_api.js"></script>
   <script src="js/io/yaml_import.js"></script>
   <script src="js/io/yaml_export.js"></script>
+  <script src="js/io/yaml_export_lvgl.js"></script>
 
   <!-- UI -->
   <script src="js/ui/device_settings.js"></script>
@@ -663,6 +695,8 @@
   <script src="features/qr_code/render.js"></script>
   <script src="features/quote_rss/render.js"></script>
   <script src="features/weather_forecast/render.js"></script>
+  <script src="features/lvgl_button/render.js"></script>
+  <script src="features/lvgl_arc/render.js"></script>
 
   <!-- Main app (depends on everything above) -->
   <script src="js/main.js"></script>
