--- a/custom_components/reterminal_dashboard/frontend/editor.html
+++ b/custom_components/reterminal_dashboard/frontend/editor.html
@@ -162,6 +162,13 @@
               </svg>
               <span class="label">Weather Forecast</span>
             </div>
+            <div class="item" data-widget-type="calendar">
+              <svg class="widget-icon" viewBox="0 0 24 24" width="18" height="18">
+                <rect x="3" y="4" width="18" height="16" rx="2" fill="none" stroke="currentColor" stroke-width="2" />
+                <path d="M16 2v4M8 2v4M3 10h18" stroke="currentColor" stroke-width="2" />
+              </svg>
+              <span class="label">Calendar</span>
+            </div>
           </div>
         </div>
 
@@ -249,7 +256,7 @@
                 fill="none" stroke="currentColor" stroke-width="2" stroke-linejoin="round" />
             </svg>
             <span class="category-name">LVGL Widgets</span>
-            <span class="category-count">2</span>
+            <span class="category-count">7</span>
           </div>
           <div class="widget-category-items">
             <div class="item" data-widget-type="lvgl_button">
@@ -590,7 +597,9 @@
     // Initialize all categories as expanded on page load
     document.addEventListener('DOMContentLoaded', function () {
       document.querySelectorAll('.widget-category').forEach(cat => {
-        cat.classList.add('expanded');
+        if (cat.getAttribute('data-category') !== 'lvgl') {
+          cat.classList.add('expanded');
+        }
       });
     });
   </script>
@@ -742,6 +751,7 @@
   <script src="features/lvgl_qrcode/render.js"></script>
   <script src="features/lvgl_bar/render.js"></script>
   <script src="features/lvgl_slider/render.js"></script>
+  <script src="features/calendar/render.js"></script>
 
   <!-- Main app (depends on everything above) -->
   <script src="js/main.js"></script>
