cal fixes and new device

--- a/custom_components/reterminal_dashboard/frontend/editor.html
+++ b/custom_components/reterminal_dashboard/frontend/editor.html
@@ -487,6 +487,7 @@
             <option value="reterminal_e1001">reTerminal E1001 (Monochrome)</option>
             <option value="reterminal_e1002">reTerminal E1002 (6-Color)</option>
             <option value="trmnl">TRMNL (ESP32-C3)</option>
+            <option value="esp32_s3_photopainter">Waveshare PhotoPainter (7-Color)</option>
           </select>
         </div>
         <div class="field">
