--- a/custom_components/reterminal_dashboard/frontend/editor.html
+++ b/custom_components/reterminal_dashboard/frontend/editor.html
@@ -21,7 +21,7 @@
   <header class="main-header">
     <div class="main-header-title">
       <h2><span class="logo-dot"></span> ESPHome Designer</h2>
-      <span>Visual YAML Editor <small style="opacity: 0.5; margin-left: 8px;">v0.8.2</small> <span
+      <span>Visual YAML Editor <small style="opacity: 0.5; margin-left: 8px;">v0.8.3</small> <span
           id="currentLayoutDevice" style="margin-left:8px; color:var(--accent);"></span></span>
     </div>
     <div class="main-header-actions desktop-only">
@@ -268,7 +268,7 @@
                 <circle cx="12" cy="13" r="1.5" fill="currentColor" />
               </svg>
               <span class="category-name">Inputs</span>
-              <span class="category-count">1</span>
+              <span class="category-count">4</span>
             </div>
             <div class="widget-category-items">
               <div class="item" draggable="true" data-widget-type="touch_area">
@@ -279,6 +279,32 @@
                 </svg>
                 <span class="label">Touch Area</span>
                 <span class="tag">Input</span>
+              </div>
+              <div class="item" draggable="true" data-widget-type="nav_next_page">
+                <svg class="widget-icon" viewBox="0 0 24 24" width="18" height="18">
+                  <path d="M10 6l6 6-6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                <span class="label">Next Page</span>
+                <span class="tag">Nav</span>
+              </div>
+              <div class="item" draggable="true" data-widget-type="nav_previous_page">
+                <svg class="widget-icon" viewBox="0 0 24 24" width="18" height="18">
+                  <path d="M14 6l-6 6 6 6" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+                </svg>
+                <span class="label">Prev Page</span>
+                <span class="tag">Nav</span>
+              </div>
+              <div class="item" draggable="true" data-widget-type="nav_reload_page">
+                <svg class="widget-icon" viewBox="0 0 24 24" width="18" height="18">
+                  <path d="M23 4v6h-6M1 20v-6h6" fill="none" stroke="currentColor" stroke-width="2"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                  <path d="M3.51 9a9 9 0 0114.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0020.49 15" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                </svg>
+                <span class="label">Reload Page</span>
+                <span class="tag">Nav</span>
               </div>
             </div>
           </div>
@@ -586,6 +612,10 @@
           <input id="snapToggle" type="checkbox" checked style="width:12px; height:12px;" />
           <span>Snap</span>
         </label>
+        <label style="display:flex; align-items:center; gap:4px; font-size:10px; cursor:pointer;" title="Lock position">
+          <input id="lockPositionToggle" type="checkbox" style="width:12px; height:12px;" />
+          <span>Lock</span>
+        </label>
       </div>
       <div id="propertiesPanel" class="properties-content">
         <div class="empty-state">
@@ -740,6 +770,19 @@
 
         <div style="border-top:1px solid var(--border-subtle); margin-top:16px; padding-top:16px;">
           <div class="prop-label">Power & Refresh Strategy</div>
+
+          <div id="global-refresh-row"
+            style="margin-top: 12px; margin-bottom: 16px; background: rgba(82, 199, 234, 0.05); padding: 10px; border-radius: 6px; border-left: 3px solid var(--accent);">
+            <div class="prop-label" style="font-size: 11px; margin-bottom: 4px;">Global Refresh Interval</div>
+            <div style="display: flex; align-items: center; gap: 8px;">
+              <input type="number" id="setting-refresh-interval" class="prop-input" placeholder="600"
+                style="width: 80px;" min="5">
+              <span style="font-size: 11px; opacity: 0.7;">seconds</span>
+            </div>
+            <div style="font-size: 10px; opacity: 0.6; margin-top: 4px;">Default time between updates. Can be overridden
+              on individual pages.</div>
+          </div>
+
           <div style="display:flex; flex-direction:column; gap:12px; margin-top:8px;">
 
             <!-- Standard -->
@@ -943,6 +986,34 @@
                   <option value="22">22:00</option>
                   <option value="23">23:00</option>
                 </select>
+              </div>
+            </div>
+
+            <!-- Page Auto-Cycling -->
+            <div style="border-top:1px solid var(--border-subtle); margin-top:8px; padding-top:12px;">
+              <div
+                style="display:flex; align-items:center; gap:8px; font-size:var(--fs-sm); font-weight: 600; color: var(--accent);">
+                <svg viewBox="0 0 24 24" width="16" height="16" fill="none" stroke="currentColor" stroke-width="2">
+                  <polyline points="23 4 23 10 17 10"></polyline>
+                  <polyline points="1 20 1 14 7 14"></polyline>
+                  <path d="M3.51 9a9 9 0 0 1 14.85-3.36L23 10M1 14l4.64 4.36A9 9 0 0 0 20.49 15"></path>
+                </svg>
+                Page Auto-Cycling
+              </div>
+              <div style="font-size:10px; opacity:0.6; margin-left:24px; margin-bottom:8px;">Automatically cycle through
+                pages on a timer.</div>
+              <div style="margin-left: 24px; display: flex; flex-direction: column; gap: 8px;">
+                <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
+                  <input id="setting-auto-cycle" type="checkbox" />
+                  <span style="font-size:var(--fs-xs); font-weight:500;">Enable Automatic Page Cycling</span>
+                </label>
+                <div id="field-auto-cycle-interval"
+                  style="display:none; align-items:center; gap:8px; background: rgba(0,0,0,0.03); padding: 4px 8px; border-radius: 4px;">
+                  <span style="font-size: 11px; opacity: 0.7;">Cycle every</span>
+                  <input type="number" id="setting-auto-cycle-interval" class="prop-input" min="5" placeholder="30"
+                    style="width:80px;">
+                  <span style="font-size: 11px; opacity: 0.7;">seconds</span>
+                </div>
               </div>
             </div>
           </div>
