--- a/custom_components/esphome_designer/frontend/index.html
+++ b/custom_components/esphome_designer/frontend/index.html
@@ -46,6 +46,9 @@
         </svg>
         GitHub
       </a>
+      <a href="https://buymeacoffee.com/koosoli" target="_blank" class="btn btn-secondary" title="Buy me a coffee">
+        <span class="mdi mdi-coffee" style="font-size: 16px;"></span>
+      </a>
       <button id="deviceSettingsBtn" class="btn btn-secondary">📱 Device Settings</button>
       <button id="editorSettingsBtn" class="btn btn-secondary">⚙ Editor Settings</button>
     </div>
@@ -59,6 +62,9 @@
         </svg></button>
       <button id="mobileDeviceBtn" class="btn btn-secondary">📱</button>
       <button id="mobileEditorSettingsBtn" class="btn btn-secondary">⚙</button>
+      <a href="https://buymeacoffee.com/koosoli" target="_blank" class="btn btn-secondary" title="Buy me a coffee">
+        <span class="mdi mdi-coffee" style="font-size: 18px;"></span>
+      </a>
       <button id="mobilePropsBtn" class="btn btn-secondary"><svg viewBox="0 0 24 24" width="18" height="18" fill="none"
           stroke="currentColor" stroke-width="2">
           <circle cx="12" cy="12" r="3"></circle>
