--- a/custom_components/esphome_designer/frontend/index.html
+++ b/custom_components/esphome_designer/frontend/index.html
@@ -103,20 +103,28 @@
         </div>
       </div>
 
-      <div class="sidebar-section" style="flex: 1; overflow-y: auto;">
-        <div class="sidebar-section-label" style="display: flex; justify-content: space-between; align-items: center;">
-          <div style="display: flex; align-items: center; gap: 8px;">
+      <div class="sidebar-section" style="flex: 1; overflow-y: auto; display: flex; flex-direction: column;">
+        <div class="palette-tabs">
+          <button class="palette-tab active" data-tab="widgets">
             <svg viewBox="0 0 24 24" width="14" height="14" fill="none" stroke="currentColor" stroke-width="2">
               <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
               <line x1="9" y1="3" x2="9" y2="21"></line>
             </svg>
             <span>Widgets</span>
-          </div>
-          <button id="quickSearchBtn" class="btn-icon btn-xs" title="Quick Search (Shift+Space)" style="opacity: 0.6;">
+          </button>
+          <button class="palette-tab" data-tab="controls">
+            <svg viewBox="0 0 24 24" width="14" height="14" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="12" cy="12" r="3"></circle>
+              <path d="M12 2v4M12 18v4M2 12h4M18 12h4"></path>
+            </svg>
+            <span>Controls</span>
+          </button>
+          <button id="quickSearchBtn" class="btn-icon btn-xs" title="Quick Search (Shift+Space)" style="opacity: 0.6; margin-left: auto;">
             <span class="mdi mdi-magnify" style="font-size: 14px;"></span>
           </button>
         </div>
-        <div id="widgetPalette" class="widget-list"></div>
+        <div id="widgetPalette" class="widget-list palette-content active"></div>
+        <div id="controlPalette" class="palette-content" style="display: none;"></div>
       </div>
 
       <div class="sidebar-section">
@@ -227,6 +235,14 @@
             <button id="updateLayoutBtn" class="btn btn-secondary btn-xs btn-icon" title="Import YAML back to canvas"
               style="width: auto; padding: 0 6px; border-radius: 4px;">
               <span class="mdi mdi-import" style="font-size: 14px;"></span>
+            </button>
+            <button id="simulatorRunBtn" class="btn btn-primary btn-xs" title="Run in LVGL Simulator"
+              style="width: auto; padding: 0 10px; border-radius: 4px; display: none; background: #4CAF50;">
+              <span class="mdi mdi-play" style="font-size: 14px; margin-right: 4px;"></span>Run
+            </button>
+            <button id="simulatorMenuBtn" class="btn btn-secondary btn-xs btn-icon" title="Simulator Options"
+              style="width: auto; padding: 0 4px; border-radius: 4px; display: none;">
+              <span class="mdi mdi-chevron-down" style="font-size: 14px;"></span>
             </button>
           </div>
         </div>
